# jedireporter

./: .env_template  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
jedi/: __init__.py  cli.py
jedireporter/: article.py  cli.py  fix_transcript.py  impex.py  llm.py  workflow.py
jedireporter/eval/article_pairwise_comp/resources/: article_pairwise_judge_system.txt  article_pairwise_judge_user.txt
jedireporter/eval/transcript_fix/: utils.py
jedireporter/resources/templates/fix_transcript/: fix_text_mistakes.txt
jedireporter/utils/: dict_utils.py
src/jedireporter/: camelModel.py  create_article.py  llm.py  post_process_article.py  transcript.py  workflow.py
src/jedireporter/eval/: __init__.py
src/jedireporter/eval/article_pairwise_comp/: __init__.py  export.py  models.py  run_article_pairwise_comp.py
src/jedireporter/eval/transcript_fix/: __init__.py  metrics.py  models.py  run_transcript_eval.py
src/jedireporter/resources/: llm-configs.yaml
src/jedireporter/resources/templates/: fix_transcript.txt  modify_style.txt
src/jedireporter/resources/templates/create_article/: create_article.txt  find_topics.txt  summarize_article.txt
src/jedireporter/resources/templates/fix_transcript/: detect_speakers.txt  fix_segment_boundaries_and_speakers.txt  select_relevant_segments.txt  split_by_questions.txt
src/jedireporter/resources/templates/post_process_article/: add_additional_info_from_web.txt
src/jedireporter/restapi/: models.py  server.py
src/jedireporter/utils/: __init__.py  cli_utils.py  gdoc.py  ioutil.py  logging.py  parallel.py
tests/: test_cli.py  test_fix_transcript.py  test_impex.py  test_llm.py  test_post_process_article.py  test_workflow.py
tests/eval/article_pairwise_comp/: test_export.py  test_models.py
tests/eval/transcript_fix/: test_metrics.py  test_models.py  test_run.py
tests/resources/: test_gold_transcript.jsonl  test_source_transcript.jsonl
tests/restapi/: conftest.py  test_models.py  test_server.py
