[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jedireporter"
version = "0.2.1"
description = "JEDI - Journalistic Excellence through Domain-specific Intelligence"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Geneea Analytics s.r.o", email = "support@geneea.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3",
    "botocore",
    "fastapi~=0.124",
    "httpx~=0.28",
    "instructor[bedrock,mistral]~=1.11",
    "langchain[openai]~=0.3",
    "langfuse~=3.10,<3.12",  # 3.12 version does not work with older Langfuse servers (e.g. v3.124.1)
    "langgraph~=0.6",
    "langsmith~=0.4",
    "pydantic~=2.12",
    "python-dotenv~=1.1",
    "PyYAML",
    "uvicorn~=0.38",
    "google-api-python-client~=2.186",
    "google-auth-httplib2~=0.2",
    "google-auth-oauthlib~=1.2",
]

[project.scripts]
jedireporter = "jedireporter.workflow:main"
jedireporter-impex = "jedireporter.impex:main"
jedireporter-transcript-eval = "jedireporter.eval.transcript_fix.run_transcript_eval:main"
jedireporter-article-compare = "jedireporter.eval.article_pairwise_comp.run_article_pairwise_comp:main"
jedireporter-server = "jedireporter.restapi.server:main"

[project.urls]
Repository = "https://github.com/Geneea/jedireporter"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
    "flake8-pyproject>=1.2",
    "tox>=4.0",
]
eval = [
    "jiwer~=4.0",
    "numpy~=2.4",
    "scipy~=1.15",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["jedireporter*"]

[tool.setuptools.package-data]
"jedireporter" = ["resources/**/*", "eval/**/resources/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg-info"]

[tool.tox]
env_list = ["py312", "lint"]
isolated_build = true

[tool.tox.env_run_base]
extras = ["dev", "eval", "google"]
commands = [["pytest", "--junitxml=test-results.xml", "{posargs}"]]

[tool.tox.env.lint]
deps = ["flake8>=6.0", "flake8-pyproject>=1.2"]
commands = [["flake8", "src", "tests"]]
